--- a/hugo.toml
+++ b/hugo.toml
@@ -2,6 +2,8 @@ baseURL = "https://1247350913.github.io/blog_website_hugo/"
 languageCode = "en-us"
 title = "nocomment"
 theme = "hugo-PaperMod"
+contentDir = "content"
+
 
 [params]
   description = "description here"
