--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: '0.145.0'  # Adjust this if you need a different Hugo version
+          hugo-version: '0.145.0'
 
       - name: Build the site
         run: hugo --minify  # Build the site (output is in the 'public' folder)
@@ -25,7 +25,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}  # This token is automatically provided by GitHub
-          publish_dir: ./public  # Folder to publish (Hugo output)
-          target_branch: gh-pages  # The branch where the files should go
+          publish_dir: ./public
+          publish_branch: gh-pages
           user_name: 'github-actions'  # The commit author name
           user_email: 'github-actions@github.com'  # The commit author email
