--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      PROD_URL: "http://nocomment.info"
 
     steps:
       - name: Checkout code
@@ -19,7 +21,7 @@ jobs:
           hugo-version: '0.145.0'
 
       - name: Build the site
-        run: hugo --minify  # Build the site (output is in the 'public' folder)
+        run: hugo --minify --baseURL ${{ env.PROD_URL }}
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
