ssl complete for https

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      PROD_URL: "http://nocomment.info"
+      PROD_URL: "https://nocomment.info"
 
     steps:
       - name: Checkout code
